# bonsai

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  TODO.md
.agents/plugins/: marketplace.json
.claude-plugin/: marketplace.json
.github/workflows/: ci.yml  release.yml
claude/bonsai/.claude-plugin/: plugin.json
claude/contextshrink/: README.md
claude/contextshrink/.claude-plugin/: plugin.json
claude/contextshrink/skills/contextshrink/: SKILL.md
copilot/bonsai-vscode/: README.md  package-lock.json  package.json
copilot/contextshrink-vscode/: README.md  package-lock.json  package.json
copilot/contextshrink-vscode/src/: extension.ts
docs/: output-schema.md
plugins/bonsai/.codex-plugin/: plugin.json
src/: budget.rs  cache.rs  formatter.rs  main.rs  parser.rs  walker.rs
tests/: cli_integration.sh  cli_output_smoke.sh  plugin_binary_lookup.sh  release_assets_smoke.sh  release_binary_incremental_smoke.sh
tests/golden/: completions-snippets.txt  incremental-context.json  token-costs.txt
