[package]
name = "bonsai"
version = "0.3.2"
edition = "2021"
description = "Local-first AST context compressor for LLM ingestion"
license = "MIT"

[dependencies]
anyhow = "1.0"
arboard = "3.4"
clap = { version = "4.5", features = ["derive"] }
globset = "0.4"
ignore = "0.4"
tiktoken-rs = "0.6"
tree-sitter = "0.21"
tree-sitter-c = "0.21"
tree-sitter-c-sharp = "0.21"
tree-sitter-cpp = "0.21"
tree-sitter-go = "0.21"
tree-sitter-java = "0.21"
tree-sitter-javascript = "0.21"
tree-sitter-kotlin = "0.3"
tree-sitter-objc = "3.0"
tree-sitter-python = "0.21"
tree-sitter-rust = "0.21"
tree-sitter-swift = { package = "devgen-tree-sitter-swift", version = "0.21" }
tree-sitter-typescript = "0.21"
